--- a/Discord.css
+++ b/Discord.css
@@ -216,14 +216,36 @@ body {
     color: white;
 }
 
+.LoginParagrafo{
+    margin: 0px;
+    font-size: 30px;
+}
 .apiLogin{
     background-color: rgb(246, 246, 246);
-    display: block;
+    display: flex;
     text-align: center;
+    justify-content: center;
     margin: 0px;
     padding: 0px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
-
+.ImgLogin{
+    height: 400px;
+    display: flex;
+}
+.SeparaLogin{
+    margin-left: 200px;
+    margin-top: 80px;
+}
+.login{
+    font-size: 25px;
+    margin-right: 20px;
+}
+.loginSenha{
+    font-size: 25px;
+    margin-right: 70px;
+}
 #LoginUser{
     width: 200px;
     height: 30px;
@@ -241,9 +263,31 @@ body {
     background-color: #23272a;
     color: white;
 }
+#LoginSenha{
+    width: 200px;
+    height: 30px;
+    margin-left: -23px;
+}
 
 .Logado {
+    background-color: rgb(246, 246, 246);
     display: none;
+    text-align: center;
+    font-size: 20px;
+    margin: 0px;
+}
+
+#LogadoSair{
+    font-size: 15px;
+    border-top: 10px;
+    border-bottom: 10px;
+    border-left: 15px;
+    border-right: 15px;
+    border-style: solid;
+    border-color: red;
+    border-radius: 50px;
+    background-color: red;
+    color: white;
 }
 @media all and (max-width: 500px) {
     .Tela{
