--- a/public/Cadastro.css
+++ b/public/Cadastro.css
@@ -4,14 +4,16 @@
 }
 
 .ImagenFundo {
-    position: absolute;
+    position:absolute;
 }
 
 .Registro {
-    position: relative;
+    position: absolute;
     display: flex;
     width: auto;
     justify-content: center;
+    margin-top: 350px;
+    margin-left: 500px;
 }
 
 .Fundo {
@@ -25,12 +27,15 @@
 .LabelTitulo {
     font-size: 25px;
     color: white;
+    margin-left: 170px;
 }
 
 .Formulario {
     display: flex;
     flex-direction: column;
     width: min-content;
+    margin-left: 50px;
+    line-height: 30px;
 }
 
 label{
@@ -56,4 +61,8 @@ input {
 }
 .InputSubmit {
     background-color: #4854c8;
+    margin-top: 30px;
+    margin-bottom: 15px;
+    margin-left: 110px;
+    width: 180px;
 }
