--- a/view/Cadastro.hbs
+++ b/view/Cadastro.hbs
@@ -584,6 +584,8 @@
             <form action="./cadastro_post" method="POST" class="Formulario">
                 <label class="LabelCad"><b>USUARIO</b></label>
                 <input type="text" name="Usuario" class="InputText" value="{{Usuario}}">
+                <label class="LabelCad"><b>E-MAIL</b></label>
+                <input type="text" name="Email" class="InputText" value="{{Email}}">
                 <label class="LabelCad"><b>SENHA</b></label>
                 <input type="password" name="Senha" class="InputText" value="{{Senha}}">
                 <input type="submit" value="Cadastrar" class="InputSubmit">
