--- a/view/Logado.hbs
+++ b/view/Logado.hbs
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Nome do cara logado</p>
+    <p>{{Usuario}}</p>
     
-    <button>Usuário Logado</button>
+    <a href="/logout">Desconectar</a>
 </body>
 </html>
