--- a/view/Logado.hbs
+++ b/view/Logado.hbs
@@ -10,12 +10,21 @@
 <body>
     <p class="nomeUser">Usuário: {{Usuario}}</p>
     <div class="divGeral">
-    <div class="divAddTexto">Adicionar Texto<br>
-        <input type="text" class="inputDivTexto">
-    </div>
+    <form action="./PostarTexto" method="POST" class="divAddTexto">Adicionar Texto<br>
+        <input type="text" name="Texto" class="inputDivTexto">
+        <input type="submit" value="Postar">
+        <p>{{ErroTexto}}</p>
+    </form>
     <div class="divAddFoto">Adicionar Foto</div>
     <div class="divAddVideo">Adicionar Vídeo</div>
     </div>
     <a href="/logout">Desconectar</a>
+
+    <div>
+        {{#Postagem}}
+            <p>Postagem realizada por: {{User}}</p>
+            <p>{{Content}}</p>
+        {{/Postagem}}
+    </div>
 </body>
 </html>
